--- a/style.css
+++ b/style.css
@@ -26,7 +26,9 @@ canvas {
 	right: 10px;
 	bottom: 10px;
 	width: 20vmin;
+	min-width: 200px;
 	height: 20vmin;
+	min-height: 200px;
 	background: radial-gradient(white, black);
 	border-radius: 50%;
 }
