Debugged style.css
Fixed the bug where the joystick center would appear tiny when viewing on smaller screen sizes

--- a/style.css
+++ b/style.css
@@ -39,8 +39,8 @@ canvas {
 	right: 0;
 	top: 0;
 	bottom: 0;
-	width: 5vmin;
-	height: 5vmin;
+	width: 25%;
+	height: 25%;
 	background: radial-gradient(black, grey);
 	border-radius: 50%;
 }
